--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="card-content">
         <span class="card-title">Ride Plan</span>
         <div class="table-container">
-          <table class="striped responsive-table">
+          <table class="striped">
             <thead>
               <tr>
                 <th>Time</th>
