action buttons position

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     .actions {
       margin-top: 1rem;
+      display: flex;
+      justify-content: space-between;
     }
 
     @media (max-width: 600px) {
